# Lithium_Extraction

./: .gitignore  PC_SAFT_Flash_Example.py  PRESENTATIONS.md  README.md  born_term_test.py  ePC_SAFT_Ionic-Liquid_Lithium_Flash.py  ePC_SAFT_Ionic-Liquid_Lithium_Flash_all_species.py  ePC_SAFT_Lithium_minimize.py  ePC_SAFT_properties.py  get_z_ionic_liquids.py  multi_phase_equilibrium.py  pyproject.toml
analyses/: README.md  __init__.py
analyses/brine_composition_screening/: README.md  (+1 more)
data/: 1-s2.0-S009813542500314X-main.md  Morgan et al. - 2018 - Development of a Rigorous Modeling Framework for Solvent-Based CO2 Capture.md
docs/: analysis_workflow_inventory.md  case_study_charter.md  case_study_claims_and_boundaries.md  case_study_completion_revalidation_2026_05_07.md  case_study_tbac_da_topo_agent2_changelog.md  case_study_tbac_da_topo_agent3_changelog.md  case_study_tbac_da_topo_changelog.md  case_study_tbac_da_topo_storyboard.md  engineering_thermodynamics_score_review_2026_05_07.md  epcsaft_lle_timeout_diagnostics_2026_05_07.md  epcsaft_parameter_readiness_audit_2026_05_07.md  epcsaft_parameter_summary.csv  epcsaft_parameter_summary_ppt.csv  epcsaft_parameter_summary_table.tex  final_case_study_readiness_checklist.md  hubach_phase_equilibrium_handoff.md  non_ionic_case_study_dependency_roadmap.md  non_ionic_solvent_extraction_case_study_plan.md  phase0_8_completion_report.md  phase9_final_presentation_skeleton.md  uv_workflow.md  zotero_plugin_blocker_2026_05_07.md
integration/: epcsaft_contract.json
models/: tbac_da_topo_alamo_surrogate.json
results/: tbac_da_topo_alamo_validation.md  tbac_da_topo_li_na_surrogate_report.md  tbac_da_topo_phase_inventory_convention_scan.md  tbac_da_topo_prommis_stage_results.md  tbac_da_topo_screening_tea.md  tbac_da_topo_success_gate_report.md
scripts/: README.md  _analysis_wrapper.py  check_epcsaft_integration.py  epcsaft_compat.py
slides/: README.md  _quarto.yml  deck.html  deck.pptx  deck.qmd  theme.css  theme.scss
tests/: test_case_study_no_forbidden_diagnostics.py  test_rezaee_reactive_equilibrium_replay.py  test_rezaee_section32_paper_figures.py  test_tbac_da_topo_alamo_contract.py  test_tbac_da_topo_prommis_mscontactor.py  test_tbac_da_topo_stage_response.py  test_tbac_da_topo_tea_schema.py
tmp/: yu2024.txt
(+496 files in other folders)
