[project]
name = "lithium-extraction"
version = "0.1.0"
description = "Produced-water lithium extraction analyses, ePC-SAFT case-study assets, and PrOMMiS/IDAES bridge planning."
readme = "slides/README.md"
requires-python = ">=3.13"
dependencies = [
    "epcsaft @ git+https://github.com/tannerpolley/ePC-SAFT.git@255ca07fbce7a2842aaea353fd626ab297af6067",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
