[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lithium-extraction"
version = "0.1.0"
description = "Produced-water lithium extraction analyses, ePC-SAFT case-study assets, and PrOMMiS/IDAES bridge planning."
readme = "slides/README.md"
requires-python = ">=3.13"
dependencies = [
    "epcsaft @ git+https://github.com/tannerpolley/ePC-SAFT.git@b4144c72e580eaa2d2b7ebf19c2040063f1eddd7",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "numpy>=1.26",
    "pandas>=2.2",
    "prommis @ git+https://github.com/tannerpolley/prommis.git@f2be79b8878edb2c6e56be6998f4d9388aa1a348",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
